static/scss/_navbar.scss
.navbarContainer {
    border-radius: 15px;
    background-color: rgba(221, 67, 43, 0.80);
    padding: 25px;
    display: inline-grid;
    justify-content: center;
}

.navbarContainer > .userDetails {
    font-size: 12px;
    font-weight: 400;
    color: white;
    width: 180px;
    padding-bottom: 10px;
}

.userDetails > .title {
    font-size: 17px;
    font-weight: 700;
}

.userDetails > p {
    margin: 0.5em;
}

.navbarButtons > .button {
    display: flex;
    font-size: 17px;
    color: white;
    font-weight: 600;
    background-color: inherit;
    padding: 10px;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    min-width: 210px;
    align-items: center;
    justify-content: flex-start;
}

button > a {
    text-decoration: none;
    color: white;
}

.navbarButtons > button:not(:active):hover {
    /* background-image: linear-gradient(rgb(0 0 0/40%) 0 0); */
    background-color: rgba(221, 67, 43, 0.80);
}

.navbarButtons > button:active {
    /* box-shadow:0 0 10px #ff9d72; */
    /* background-color: rgba(256, 256, 256, 30); */
    background-color: black;

    transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
    /* background-image: linear-gradient(rgb(0 0 0 * 40%) 0 0); */
    /* transition: ease-in; */
    /* transition-duration: 0.3s; */
}

.unitSearchContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 10px;
}

.unitSearchContent {
    width: 100%;
}

.pageContainer {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    padding: 1rem;
}

